# bpf-rbacd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bpf-rbacd-common/: Cargo.toml
bpf-rbacd-common/src/: lib.rs
bpf-rbacd-ebpf/: Cargo.toml
bpf-rbacd-ebpf/src/: main.rs
config/: bpf-rbacd.service  policy.yaml
docs/: DESIGN.md  DEVELOPMENT.md
src/: lib.rs  main.rs  namespace.rs  policy.rs  protocol.rs
tests/: integration.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
