[workspace]

[package]
name = "bpf-rbacd-ebpf"
version = "0.1.0"
edition = "2021"
description = "eBPF LSM programs for bpf-rbacd policy enforcement"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
bpf-rbacd-common = { path = "../bpf-rbacd-common" }

[[bin]]
name = "bpf-rbacd-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
remap-path-prefix = true

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
